--- a/src/app/pages/audience.component.html
+++ b/src/app/pages/audience.component.html
@@ -10,7 +10,7 @@
       <div class="col-sm-12" *ngIf="chosenQuestion.question_number == 0">
         <div class="card card-poll card-warning" style="margin-bottom: 0; height: 40vh">
           <div class="card-body card-block text-center">
-            <h2 style="margin-top: 23%">Selamat datang di acara #UTBeyond</h2>
+            <h2 style="margin-top: 20%">Selamat Datang di Acara <i>Kick Off</i> UT Beyond</h2>
           </div>
         </div>
       </div>
